vid 8 displaying the guitars

--- a/src/app/pages/guitar-catalogue/guitar-catalogue.page.html
+++ b/src/app/pages/guitar-catalogue/guitar-catalogue.page.html
@@ -1,1 +1,8 @@
-<p>guitar-catalogue works!</p>
+
+<main class="container mx-auto p-4">
+<p *ngIf="loading" >loading guitars...   </p>
+<app-guitar-list [guitars]="guitars"></app-guitar-list>
+
+</main>
+
+
