vid 9 making the guitarlist look good

--- a/src/app/components/guitar-list/guitar-list.component.html
+++ b/src/app/components/guitar-list/guitar-list.component.html
@@ -1,5 +1,7 @@
 <ul>
-  <li *ngFor="let guitar of guitars">
-    <span>{{guitar.model}} by {{guitar.manufacturer}} </span>
-  </li>
+  <app-guitar-list-item
+    *ngFor="let guitar of guitars"
+    [guitar]="guitar"
+  ></app-guitar-list-item>
 </ul>
+
