--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
-<h1 class="font-bold text-3xl text-blue-600 center">
-  Hello world
-</h1>
+<app-navbar></app-navbar>
 
 
 <router-outlet>  </router-outlet>
