vid 11 ändrade guitar.id till string från number osv

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="bg-yellow-500 flex justify-between items-center p-4 fixed w-full sticky top-0 ">
+<nav class="bg-yellow-500 flex justify-between items-center p-4 fixed w-full sticky top-0 z-50">
   <span class="font-bold">Guitars in Angular</span>
 
   <ng-container *ngIf="user !== undefined">
