--- a/src/app/components/favourite-button/favourite-button.component.html
+++ b/src/app/components/favourite-button/favourite-button.component.html
@@ -2,7 +2,16 @@
 
   <button
     (click)="onFavouriteClick()"
-    class="border border-slate-300 rounded flex justify-center items-center p-2 text-pink-600 "><span
-    class="material-icons">favorite</span></button>
+    class="border border-slate-300 rounded flex justify-center items-center p-2 text-pink-600 ">
+
+    <ng-container *ngIf="isFavourite; then favourite else notFavourite" class="material-icons"></ng-container>
+
+    <ng-template #favourite>
+    <span class="material-icons">favorite</span>
+    </ng-template>
+    <ng-template #notFavourite>
+      <span class="material-icons">favorite_border</span>
+    </ng-template>
+  </button>
 
 </aside>
