--- a/src/app/components/favourite-button/favourite-button.component.html
+++ b/src/app/components/favourite-button/favourite-button.component.html
@@ -4,6 +4,8 @@
     (click)="onFavouriteClick()"
     class="border border-slate-300 rounded flex justify-center items-center p-2 text-pink-600 ">
 
+
+    <ng-container *ngIf="!loading; else spinner">
     <ng-container *ngIf="isFavourite; then favourite else notFavourite" class="material-icons"></ng-container>
 
     <ng-template #favourite>
@@ -12,6 +14,15 @@
     <ng-template #notFavourite>
       <span class="material-icons">favorite_border</span>
     </ng-template>
+
+    </ng-container>
+
+
+
+    <ng-template #spinner>
+      <span class="material-icons animate-spin">refresh</span>
+    </ng-template>
+
   </button>
 
 </aside>
