--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -1,1 +1,8 @@
-<p>profile works!</p>
+<header class="container mx-auto p-4">
+<h1 class="text-3xl text-white">Welcome, username</h1>
+</header>
+<main class="container mx-auto p-4">
+
+  <h4 class="text-xl text-white">Your favourite guitars: </h4>
+  <app-guitar-list [guitars]="favourites"></app-guitar-list>
+</main>
